--- a/Pages/style.css
+++ b/Pages/style.css
@@ -1,24 +1,88 @@
+
 *{
     margin: 0px;
     padding: 0px;
+    
 }
 main{
-    background-color: beige;
+    padding-top: 100px;
     margin: auto;
     height: 931px;
     width: 1350px;
 }
 div#form{
-    width: 453px;
+    padding-top: 30px;
+    width: 452px;
     height: 702px;
     display: inline-block;
 }
-h1{
+div#form>h1{
     width: 250px;
     text-align: center;
+    margin: auto;
+    font-size: 32px;
+}
+.cor{
+    color: rgb(80, 0, 184);
+}
+div#form>p{
+    color: rgba(128, 128, 128, 0.774);
+    padding-top: 10px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+input#email{
+    margin-bottom: 40px;
+    margin-top: 7px;
+    width: 452px;
+    height: 48px;
+    border-radius: 9px;
+    border: 1px solid gray;
+}
+input#email:hover{
+    margin-bottom: 40px;
+    margin-top: 7px;
+    width: 452px;
+    height: 48px;
+    border-radius: 9px;
+    border: 2px solid purple;
+}
+input#password{
+    margin-bottom: 7px;
+    margin-top: 7px;
+    width: 452px;
+    height: 48px;
+    border-radius: 9px;
+    border: 1px solid gray;
+}
+input#password:hover{
+    margin-bottom: 7px;
+    margin-top: 7px;
+    width: 452px;
+    height: 48px;
+    border-radius: 9px;
+    border: 2px solid rgb(145, 0, 113);
+}
+a{
+    text-decoration: none;
+    color: rgba(128, 128, 128, 0.582);
+}
+button{
+    background-color: purple;
+    color: white;
+    margin-bottom: 37px;
+    margin-top: 47px;
+    width: 452px;
+    height: 48px;
+    border-radius: 9px;
+    border: 0px;
+    font-size: larger;
+}
+.txt1{
+    text-align: center;
+    
 }
 div#img{
-    background-color: aqua;
     float: right;
 }
 img{
