finalizando a pagina de login

--- a/Pages/style.css
+++ b/Pages/style.css
@@ -1,13 +1,15 @@
-
+:root{
+    --corRoxa: #6366F1;
+}
 *{
     margin: 0px;
     padding: 0px;
-    
+    font-family: Arial, Helvetica, sans-serif;
 }
 main{
     padding-top: 100px;
     margin: auto;
-    height: 931px;
+    height: 855px;
     width: 1350px;
 }
 div#form{
@@ -23,7 +25,7 @@ div#form>h1{
     font-size: 32px;
 }
 .cor{
-    color: rgb(80, 0, 184);
+    color: var(--corRoxa);
 }
 div#form>p{
     color: rgba(128, 128, 128, 0.774);
@@ -32,6 +34,7 @@ div#form>p{
     margin-bottom: 50px;
 }
 input#email{
+    font-size: 20px;
     margin-bottom: 40px;
     margin-top: 7px;
     width: 452px;
@@ -45,9 +48,10 @@ input#email:hover{
     width: 452px;
     height: 48px;
     border-radius: 9px;
-    border: 2px solid purple;
+    border: 2px solid var(--corRoxa)
 }
 input#password{
+    font-size: 20px;
     margin-bottom: 7px;
     margin-top: 7px;
     width: 452px;
@@ -61,16 +65,16 @@ input#password:hover{
     width: 452px;
     height: 48px;
     border-radius: 9px;
-    border: 2px solid rgb(145, 0, 113);
+    border: 2px solid var(--corRoxa)
 }
 a{
     text-decoration: none;
     color: rgba(128, 128, 128, 0.582);
 }
 button{
-    background-color: purple;
+    background-color: var(--corRoxa);
     color: white;
-    margin-bottom: 37px;
+    margin-bottom: 27px;
     margin-top: 47px;
     width: 452px;
     height: 48px;
@@ -80,7 +84,53 @@ button{
 }
 .txt1{
     text-align: center;
+    margin-bottom: 20px;
     
+}
+#ou{
+    
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0px;
+    gap: 16px;
+
+    width: 452px;
+    height: 19px;
+
+    flex: none;
+    order: 1;
+    align-self: stretch;
+    flex-grow: 0;
+}
+.linha{
+
+width: 199px;
+height: 0px;
+
+border: 1px solid #A2A4AD;
+
+order: 0;
+flex-grow: 1;
+
+}
+.icon{
+    height: 20px;
+    width: 20px;
+    margin-right: 10px;
+    text-align: center;
+}
+.enter{
+    margin: auto;
+    background-color: white;
+    color: rgba(0, 0, 0, 0.836);
+    margin-bottom: 20px;
+    margin-top: 7px;
+    width: 452px;
+    height: 48px;
+    border-radius: 9px;
+    border: 1px solid gray;
+    font-size: 20px;
 }
 div#img{
     float: right;
